# understand-r1-zero

./: .gitignore  Makefile  README.md  evaluate_model.py  pyproject.toml  train_zero_math.py
analysis/: answering_ability.py  keyword_count.py  sr_detection.py
examples/: qwen2.5-math-1.5b.sh
understand_r1_zero/: math_grader.py
