[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "understand-r1-zero"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zichen", email = "liuzc@sea.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "math-verify[antlr4_13_2]",
  "pylatexenc==2.10",
  "fire",
]

[project.urls]
Documentation = "https://github.com/sail-sg/understand-r1-zero#readme"
Issues = "https://github.com/sail-sg/understand-r1-zero/issues"
Source = "https://github.com/sail-sg/understand-r1-zero"

[tool.hatch.version]
path = "understand_r1_zero/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:understand_r1_zero tests}"

[tool.coverage.run]
source_pkgs = ["understand_r1_zero", "tests"]
branch = true
parallel = true
omit = [
  "understand_r1_zero/__about__.py",
]

[tool.coverage.paths]
understand_r1_zero = ["understand_r1_zero", "*/understand-r1-zero/understand_r1_zero"]
tests = ["tests", "*/understand-r1-zero/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
